testdata/merge/invalid/err_no_header.reg
[HKEY_LOCAL_MACHINE\SOFTWARE\Test]
"Value"="Data"
